--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
         <button id="submitGuessButton">Submit</button>
     </div>
 
+    <br><br>
+
+    <div id="guessDisplay">
+
+
+
+
+    </div>
+
 </body>
 </html>
