--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Budget Wordle</h1>
 
         <label for="input">Make your guess:</label>
-        <input type="text" id="userGuess" name="userGuess"><br><br>
+        <input type="text" id="userGuess" name="userGuess" maxlength="5"><br><br>
 
         <button id="submitGuessButton">Submit</button>
     </div>
@@ -26,7 +26,7 @@
     <br><br>
 
     <div id="guessDisplay">
-
+        
 
 
 
