--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
 
         <button id="retryButton">Retry</button>
 
-    </div>
+        <button id="fullResetButton">Reset all values button (test)</button>
 
-    <br><br>
+        <div id="streakContainer">
+
+            <p class="streak">Your current streak: <span id="currentStreak"></span></p>
+            <p class="streak">Your highest streak: <span id="highestStreak"></span></p>
+
+        </div>
+
+
+    </div>
 
     <div id="guessContainerDiv">
 
