--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
         <button id="retryButton">Retry</button>
 
-        <button id="fullResetButton">Reset all values button (test)</button>
+        <!-- Testing purposes -->
+        <!-- <button id="fullResetButton">Reset all values button (test)</button> -->
 
         <div id="streakContainer">
 
