Moved test into main code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <label for="input">Make your guess:</label>
         <input type="text" id="userGuess" name="userGuess" maxlength="5" onkeydown="guessEnter()"><br><br>
 
-        <button id="submitGuessButton">Submit</button>
+        <!-- <button id="submitGuessButton">Submit</button> -->
 
         <button id="retryButton">Retry</button>
 
