--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div id="Game">
         <h1>Budget Wordle</h1>
 
-        <label for="input">Make your guess:</label>
-        <input type="text" id="userGuess" name="userGuess" maxlength="5" onkeydown="guessEnter()"><br><br>
+        <!-- <label for="input">Make your guess:</label> -->
+        <!-- <input type="text" id="userGuess" name="userGuess" maxlength="5" onkeydown="guessEnter()"><br><br> -->
 
         <!-- <button id="submitGuessButton">Submit</button> -->
 
