--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="wordle.js" defer></script>
 
-    <script src="test.js" defer></script>
+    <!-- <script src="test.js" defer></script> -->
 
 </head>
 <body>
