--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <script src="wordle.js" defer></script>
+    <!-- <script src="wordle.js" defer></script> -->
 
-    <!-- <script src="test.js" defer></script> -->
+    <script src="test.js" defer></script>
 
 </head>
 <body>
