--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="wordle.js" defer></script> -->
 
     <script src="test.js" defer></script>
+<!-- script type="module" src="word.js" defer></script> -->
 
 </head>
 <body>
