--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- <script src="wordle.js" defer></script> -->
-
     <script src="test.js" defer></script>
+    <!-- <script src="words.js" defer></script> -->
+
 <!-- script type="module" src="word.js" defer></script> -->
 
 </head>
@@ -20,15 +21,7 @@
     <div id="Game">
         <h1>Budget Wordle</h1>
 
-        <!-- <label for="input">Make your guess:</label> -->
-        <!-- <input type="text" id="userGuess" name="userGuess" maxlength="5" onkeydown="guessEnter()"><br><br> -->
-
-        <!-- <button id="submitGuessButton">Submit</button> -->
-
         <button id="retryButton">Retry</button>
-
-        <!-- Testing purposes -->
-        <!-- <button id="fullResetButton">Reset all values button (test)</button> -->
 
         <div id="streakContainer">
 
